# AE460-Solar-Gravitational-Lens

./: FinalSailCode.m  README.md  SGL_Mission_FlightDynamics.m  StructureStressAnalysis.m
Simple Image Simulation/: main.cpp  sgl_ring_from_image  sgl_rings
sgl_codebase_cuda/: CMakeLists.txt  README.md
sgl_codebase_cuda/arduino/: sgl_controller.ino
sgl_codebase_cuda/common/: config.cpp  config.hpp  image_io.cpp  image_io.hpp  logger.hpp
sgl_codebase_cuda/config/: config.json
sgl_codebase_cuda/jetson/: main.cpp  power_manager.cpp  power_manager.hpp  scheduler.cpp  scheduler.hpp
sgl_codebase_cuda/jetson/cuda/: cuda_api.hpp  psf_cuda.cu  wiener_cuda.cu
sgl_codebase_cuda/processing/: psf.cpp  psf.hpp
sgl_codebase_cuda/scripts/: convert_ppm_to_png.py  convert_to_ppm.py
sgl_codebase_cuda/simulation/: main.cpp
